--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "build": "vocs build",
     "preview": "vocs preview",
     "predeploy": "pnpm run build",
+    "savebuild": "rm -rf build/* && vocs build && mv docs/dist/* build/ && rm -rf docs/dist",
     "deploy": "gh-pages -d docs/dist"
   },
   "dependencies": {
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.3.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.6.2",
-    "vocs": "1.0.0-alpha.58"
+    "vocs": "1.0.0-alpha.61"
   },
   "packageManager": "pnpm@9.2.0+sha512.98a80fd11c2e7096747762304106432b3ddc67dcf54b5a8c01c93f68a2cd5e05e6821849522a06fb76284d41a2660d5e334f2ee3bbf29183bf2e739b1dafa771",
   "devDependencies": {
