--- a/package.json
+++ b/package.json
@@ -1,29 +1,11 @@
 {
-  "name": "rukulab.github.io",
-  "homepage": "https://rukulab.github.io",
-  "version": "0.1.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vocs dev",
-    "build": "vocs build",
-    "preview": "vocs preview",
-    "predeploy": "pnpm run build",
-    "savebuild": "rm -rf build/* && vocs build && mv docs/dist/* build/ && rm -rf docs/dist",
-    "deploy": "gh-pages -d docs/dist"
-  },
-  "dependencies": {
-    "@types/react": "^18.3.11",
-    "lucide-react": "^0.447.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "typescript": "^5.6.2",
-    "vocs": "1.0.0-alpha.61"
-  },
-  "packageManager": "pnpm@9.2.0+sha512.98a80fd11c2e7096747762304106432b3ddc67dcf54b5a8c01c93f68a2cd5e05e6821849522a06fb76284d41a2660d5e334f2ee3bbf29183bf2e739b1dafa771",
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "gh-pages": "^6.1.1",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
+    "vitepress": "^1.5.0"
+  },
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b",
+  "scripts": {
+    "docs:dev": "vitepress dev",
+    "docs:build": "vitepress build",
+    "docs:preview": "vitepress preview"
   }
 }
